# 3dfier

./: .appveyor.ubuntu.yml  .appveyor.yml  .dockerignore  .gitignore  .travis.yml  3dfier.dockerfile  Bridge.cpp  Bridge.h  Building.cpp  Building.h  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile_base  Dockerfile_builder  FindYamlCpp.cmake  Forest.cpp  Forest.h  LICENSE  Map3d.cpp  Map3d.h  Polygon3D.cpp  Polygon3D.h  Polygon3d.cpp  Polygon3d.h  README.md  Road.cpp  Road.h  Separation.cpp  Separation.h  Terrain.cpp  Terrain.h  TopoFeature.cpp  TopoFeature.h  Vegetation.cpp  Vegetation.h  Water.cpp  Water.h  _config.yml  (+18 more)
.github/workflows/: docker-image-build.yml  docker-image-master.yml  docker-image-publish.yml  exe_build.yml  main.yml
boo.xcodeproj/: project.pbxproj
boo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
boo.xcodeproj/project.xcworkspace/xcshareddata/: boo.xccheckout
cmake/Modules/: FindLASlib.cmake  FindLASzip.cmake  FindTriangle.cmake  FindYamlCpp.cmake  FindlibLAS.cmake
docs/: _config.yml  createtag  data_preparation.md  examples.md  formats.md  index.md  installation.md  pdf-3dfier.sh  tooltips.html
docs/_data/: nav.yml  tags.yml  topnav.yml
docs/_data/sidebars/: 3dfier_sidebar.yml  home_sidebar.yml
docs/_includes/: head.html  imagezoom.html  sidebar.html
docs/_layouts/: default.html  page.html
docs/assets/configs/: 3dfier.mtl  extent_blue.yml  extent_green.yml  extent_purple.yml  extent_red.yml  extents.yml  floor_false.yml  floor_true.yml  inner_wall_false.yml  inner_wall_true.yml  innerbuffer_05.yml  innerbuffer_1.yml  innerbuffer_3.yml  lod0.yml  lod1.yml  tinsimp05.yml  tinsimp_0.yml  tinsimp_05.yml
docs/css/: imagemodal.css
docs/js/: customscripts.js  imagemodal.js
docs/pages/architecture/: main_flow.md  output_flow.md  threedfy_flow.md
docs/pages/data-preparation/: building-footprints-from-openstreetmap.md  building_footprints_from_openstreetmap.md  data_preparation_overview.md  generate-terrain.md  overview.md
docs/pages/examples/: bgt_example.md  example-data.md  example_data.md  lod_buildings.md  minimal_data_requirements.md  terrain_simplification.md  visualisation.md
docs/pages/getting-started/: configuration_settings.md  contents.md  file_formats.md  first_run.md  how-to-run.md  installation.md  introduction.md  known-issues.md  known_issues.md  release_contents.md  settings.md  useful_scripts.md  visualisation.md  what_does_it_do.md  windows-binaries.md  windows-compilation.md
docs/pages/installation/: docker-image.md  install_docker.md  install_ubuntu_16_04.md  install_windows.md  ubuntu-16-04.md  windows-binaries.md  windows-compilation.md
docs/pages/output-formats/: overview.md
docs/pdfconfigs/: config_3dfier_pdf.yml  titlepage.html
example_data/: README.md  testarea_config.yml  testarea_config_unix.yml
example_data/ahn3/: ahn3_cropped_1.laz  ahn3_cropped_2.laz
example_data/bgt/: bgt_begroeidterreindeel.sqlite  bgt_kunstwerkdeel.sqlite  bgt_onbegroeidterreindeel.sqlite  bgt_ondersteunendwaterdeel.sqlite  bgt_ondersteunendwegdeel.sqlite  bgt_overbruggingsdeel.sqlite  bgt_overigbouwwerk.sqlite  bgt_pand.sqlite  bgt_scheiding.sqlite  bgt_tunneldeel.sqlite  bgt_waterdeel.sqlite  bgt_wegdeel.sqlite  qgis_project.qgs
example_data/output/: testarea.json  testarea.stl
example_data/output2/: shp2d.dbf  shp2d.shp  shp2d.shx
paper/: paper.bib  paper.md
resources/: 3dfier.mtl  build_ubuntu1604.sh  obj2off.py
resources/3dfier2sim/: 3dfier2sim.cpp  CMakeLists.txt  README.md
resources/BGT_prepare/: BGT_conversion.bat  BGT_conversion_full_gpkg.bat  BGT_fix_srs_win.bat  ReadMe.md
resources/TOP10NL-etl/: etl-top10nl-v1.2-gml-to-shapefile.cfg
resources/build_ubuntu/: build_3dfier.sh  build_cgal.sh  build_deps.sh  input.jl
resources/config_files/: myconfig.yml  myconfig_DEFAULTS.yml  myconfig_README.yml
resources/convert-to-simulation/: 3dfier2ansys.cpp  CMakeLists.txt  README.md
resources/flowdiagrams/: 3dfier classes.drawio  3dfier general flow.drawio  3dfier reading points.drawio  3dfier reading polygons.drawio  3dfier writing model CSV.drawio  3dfier writing model CityGML.drawio  3dfier writing model CityJSON.drawio  3dfier writing model IMGeo.drawio  3dfier writing model OBJ.drawio  3dfier writing model.drawio  3dfier_classes.drawio  3dfier_general_flow.drawio  3dfier_reading_points.drawio  3dfier_reading_polygons.drawio  3dfier_writing_model.drawio  3dfier_writing_model_citygml.drawio  3dfier_writing_model_cityjson.drawio  3dfier_writing_model_csv.drawio  3dfier_writing_model_imgeo.drawio  3dfier_writing_model_obj.drawio  Threedfy.drawio  convert_flow_diagrams.bat  legend.drawio  threedfy_fix_bowties.drawio  threedfy_lifting.drawio  threedfy_stitching.drawio  threedfy_vertical_walls.drawio
resources/splitobj/: cleanvertices.mlx  splitobj.py
resources/splitobj_cpp/: build.sh  main.cpp
ressources/: 3dfier.mtl  AHN3_to_laz.bat  TOP10NL_to_shp.bat  build_ubuntu1604.sh  create_vegetation_off.py  translate2min-obj.py
ressources/BGT prepair/: BGT_conversion.bat  Readme.txt
ressources/BGT prepare/: Readme.txt
ressources/BGT_prepare/: BGT_conversion_full.bat  BGT_conversion_full_old.bat  BGT_fix_gfs_date_win.bat  BGT_fix_srs_win.bat  ReadMe.md  Readme.txt
ressources/Example_data/: Delft.yml
ressources/TOP10NL-etl/: etl-top10nl-v1.2-gml-to-shapefile.cfg
ressources/build_ubuntu/: build_3dfier.sh  build_cgal.sh  build_deps.sh
ressources/convert-to-simulation/: CMakeLists.txt  clean_t.off  simulatorready.cpp  wobridges_t.off
src/: .Map3d.cpp.swp  .main.cpp.swp  Bridge.cpp  Bridge.h  Building.cpp  Building.h  Forest.cpp  Forest.h  Map3d.cpp  Map3d.h  Road.cpp  Road.h  Separation.cpp  Separation.h  Terrain.cpp  Terrain.h  TopoFeature.cpp  TopoFeature.h  Water.cpp  Water.h  definitions.h  geomtools.cpp  geomtools.h  io.cpp  io.h  main.cpp
test/: GridTest.cpp
vs_build/: .gitignore  3dfier-UnitTesting.vcxproj  3dfier-UnitTesting.vcxproj.filters  3dfier.psess  3dfier.sln  3dfier.vcxproj  3dfier.vcxproj.filters  3dfierDebug.props  3dfierRelease.props
(+49 files in other folders)
